# Xconfess

./: .gitignore  CI_CHECKS_SUMMARY.md  CONTRIBUTING.md  DEPLOYMENT_CHECKLIST.md  FILES_CHANGED.md  IMPLEMENTATION_ERROR_CODES_213.md  ISSUE_213_INDEX.md  PR_DESCRIPTION.md  PULL_REQUEST_521.md  PULL_REQUEST_723.md  PULL_REQUEST_731.md  QUICK_REFERENCE_ERROR_CODES.md  QUICK_START.md  README.md  SECURITY_FIXES_SUMMARY.md  SMOKE_TEST_CHECKLIST.md  SMOKE_TEST_CURL_GUIDE.md  SMOKE_TEST_IMPLEMENTATION.md  SMOKE_TEST_INDEX.md  SMOKE_TEST_QUICK_REFERENCE.txt  SMOKE_TEST_VALIDATION.md  WAVE_5_ROADMAP.md  compose.yaml  package-lock.json  package.json  tsconfig.seed.json
.github/: BLOCKED_TEMPLATE.md  pull_request_template.md
deployments/: README.md  contract-wasm-manifest.json  sample.redacted.json  testnet.json
docs/: API_INTEGRATION.md  CONTRIBUTOR_LOGS_GUIDE.md  DEMO_SCRIPT.md  GLOSSARY.md  GRANTFOX_CONTRIBUTOR_GUIDE.md  HEALTH_ENDPOINT_QUICK_REFERENCE.md  LOG_ATTACHING_GUIDE.md  SMALL_PR_POLICY.md  SOROBAN_SETUP.md  WAVE_5_CONTRIBUTOR_FAQ.md  WAVE_5_READY_FOR_REVIEW_TEMPLATE.md  WINDOWS_SETUP.md  contract-abi-reference.md  contract-event-compatibility-fixtures.md  contract-event-version-bump-checklist.md  contract-release-and-upgrade-runbook.md  contract-threat-model.md  (+14 more)
xconfess-contracts/contracts/anonymous-tipping/: Cargo.toml
xconfess-contracts/contracts/anonymous-tipping/src/: errors.rs  lib.rs  test.rs  tipping_adversarial.rs
xconfess-contracts/contracts/anonymous-tipping/tests/: benchmarks.rs  invariants.rs  migration.rs
xconfess-contracts/contracts/confession-anchor/: Cargo.toml
xconfess-contracts/contracts/confession-anchor/src/: conevent.rs  errors.rs  events.rs  lib.rs
xconfess-contracts/contracts/confession-anchor/tests/: adversarial.rs  benchmarks.rs  integration.rs  migration.rs  property_anchor.rs
xconfess-contracts/contracts/confession-registry/: Cargo.toml
xconfess-contracts/contracts/confession-registry/src/: confession_reg_auth.rs  lib.rs
xconfess-contracts/contracts/confession-registry/tests/: benchmarks.rs  cross_contract_harness.rs
xconfess-contracts/contracts/reputation-badges/: Cargo.toml
xconfess-contracts/contracts/reputation-badges/src/: lib.rs  test.rs
xconfess-contracts/contracts/reputation-badges/tests/: benchmarks.rs
(+812 files in other folders)
