[package]
name = "anonymous-tipping"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[[test]]
name = "benchmarks"
path = "tests/benchmarks.rs"

[[test]]
name = "invariants"
path = "tests/invariants.rs"

[[test]]
name = "migration"
path = "tests/migration.rs"
